--- a/briar-android/src/main/res/values-gl/strings.xml
+++ b/briar-android/src/main/res/values-gl/strings.xml
@@ -55,6 +55,8 @@
   <string name="groups_button">Grupos Privados</string>
   <string name="forums_button">Foros</string>
   <string name="blogs_button">Blogues</string>
+  <!--This is part of the main menu. The app will be locked when this is tapped.-->
+  <string name="lock_button">Bloquear App</string>
   <string name="settings_button">Axustes</string>
   <string name="sign_out_button">Finalizar sesión</string>
   <!--Transports-->
@@ -63,7 +65,9 @@
   <string name="transport_lan">Wi-Fi</string>
   <!--Notifications-->
   <string name="reminder_notification_title">Desconectou de Briar</string>
+  <string name="reminder_notification_text">Toque para voltar a conectar</string>
   <string name="reminder_notification_channel_title">Recordatorio para conectar a Briar</string>
+  <string name="reminder_notification_dismiss">Desbotar</string>
   <string name="ongoing_notification_title">Conectado a Briar</string>
   <string name="ongoing_notification_text">Toque para abrir Briar</string>
   <plurals name="private_message_notification_text">
@@ -106,7 +110,8 @@
   <string name="help">Axuda</string>
   <string name="sorry">Desculpe</string>
   <!--Contacts and Private Conversations-->
-  <string name="no_contacts">Sen contactos a mostrar\n\nToque na icona + para engadir contactos</string>
+  <string name="no_contacts">Sen contactos a mostrar</string>
+  <string name="no_contacts_action">Toque a icona + para engadir un contacto</string>
   <string name="date_no_private_messages">Sen mensaxes</string>
   <string name="no_private_messages">Sen mensaxes que mostrar</string>
   <string name="message_hint">Esciba unha mensaxe</string>
@@ -118,20 +123,19 @@
   <string name="add_contact_title">Engada un contacto</string>
   <string name="face_to_face">Debe encontrarse coa persoa que quere engadir como contacto.\n\nEsto evitará que calquera poida suplantala ou ler as súas mensaxes no futuro.</string>
   <string name="continue_button">Continuar</string>
-  <string name="connection_failed">Fallou a conexión</string>
   <string name="try_again_button">Tenteo de novo</string>
   <string name="waiting_for_contact_to_scan">Agardando polo contacto para escanear e conectar\u2026</string>
   <string name="exchanging_contact_details">Intercambiando detalles do contacto\u2026</string>
   <string name="contact_added_toast">Contacto engadido: %s</string>
   <string name="contact_already_exists">O contacto %s xa existe</string>
-  <string name="contact_exchange_failed">Fallo no intercambio de contacto</string>
   <string name="qr_code_invalid">O código QR non é válido</string>
   <string name="qr_code_unsupported">O código QR que intenta escanear pertence a unha versión antiga de %s que xa non está soportada.\n\nPor favor, asegúrese que ambas utilizan a última versión e inténteno de novo.</string>
   <string name="camera_error">Fallo na cámara</string>
   <string name="connecting_to_device">Conectando co dispositivo\u2026</string>
   <string name="authenticating_with_device">Autenticándose co dispositivo\u2026</string>
-  <string name="connection_aborted_local">Conexión cancelada! Esto podería significar que alguén está intentando entremeterse na súa conexión.</string>
-  <string name="connection_aborted_remote">Conexión rexeitada polo seu contacto! Esto podería indicar que alguén está intentando interferir na súa conexión</string>
+  <string name="connection_error_title">Non se puido conectar co contacto</string>
+  <string name="connection_error_explanation">Por favor, comprobe que ambas están conectadas a mesma rede Wi-Fi.</string>
+  <string name="connection_error_feedback">Si persiste o problema,<a href="feedback">envíe un informe</a> para axudarnos a mellorar a app.</string>
   <!--Introductions-->
   <string name="introduction_onboarding_title">Presente os seus contactos</string>
   <string name="introduction_onboarding_text">Pode presentar aos seus contactos, así non precisan encontrarse en persoa para conectar a través de Briar.</string>
@@ -159,7 +163,8 @@
     <item quantity="other">%d novos contactos engadidos.</item>
   </plurals>
   <!--Private Groups-->
-  <string name="groups_list_empty">Sen grupos para mostrar\n\nToque na icona + para crear un grupo, ou pida aos seus contactos que compartan grupos con vostede</string>
+  <string name="groups_list_empty">Sen grupos que mostrar</string>
+  <string name="groups_list_empty_action">Toque a icona + para crear un grupo, ou solicite aos contactos que compartan grupos con vostede</string>
   <string name="groups_created_by">Creado por %s</string>
   <plurals name="messages">
     <item quantity="one">%d mensaxe</item>
@@ -212,7 +217,8 @@
   <string name="groups_reveal_visible_revealed_by_contact">A relación con contacto é visible para o grupo (revelada por %s)</string>
   <string name="groups_reveal_invisible">A relación co contacto non é visible para o grupo</string>
   <!--Forums-->
-  <string name="no_forums">Si foros que mostrar\n\nToque na icona + para crear un foro, ou solicite aos contactos que compartan foros con vostede</string>
+  <string name="no_forums">Sen foros que mostrar</string>
+  <string name="no_forums_action">Toque na icona + para crear un foro, ou pida aos contactos que compartan foros con vostede</string>
   <string name="create_forum_title">Crear Foro</string>
   <string name="choose_forum_hint">Escolla un nome para o seu foro</string>
   <string name="create_forum_button">Crear Foro</string>
@@ -236,7 +242,8 @@
   <string name="forum_share_button">Compartir Foro</string>
   <string name="contacts_selected">Contactos selecionados</string>
   <string name="activity_share_toolbar_header">Escolla Contactos</string>
-  <string name="no_contacts_selector">Sen contactos que mostrar\n\nPor favor, volte aquí tras engadir un contacto</string>
+  <string name="no_contacts_selector">Sen contactos a mostrar</string>
+  <string name="no_contacts_selector_action">Volte aquí tras engadir un contacto</string>
   <string name="forum_shared_snackbar">Foro compartido cos contactos escollidos</string>
   <string name="forum_share_message">Engadir unha mensaxe (opcional)</string>
   <string name="forum_share_error">Algo fallou ao compartir este foro.</string>
@@ -269,7 +276,8 @@
   <string name="blogs_blog_post_created">Entrada no blog creada</string>
   <string name="blogs_blog_post_received">Nova entrada de blog recibida</string>
   <string name="blogs_blog_post_scroll_to">Desplazarse a</string>
-  <string name="blogs_feed_empty_state">Sen entradas que mostrar\n\nAs entradas dos seus contactos e blogs aos que está subscrita aparecerán aquí\n\nToque na icona do lapis para escribir unha entrada</string>
+  <string name="blogs_feed_empty_state">Sen publicacións que mostrar</string>
+  <string name="blogs_feed_empty_state_action">Publicacións dos contactos e blogs aos que se suscriba aparecerán aquí\n\nToque na icona do lápis para encribir unha entrada</string>
   <string name="blogs_remove_blog">Eliminar Blog</string>
   <string name="blogs_remove_blog_dialog_message">Segura de que quere eliminar este blog?\n\nAs entradas eliminaranse do seu dispositivo pero non dos dispositivos de outras persoas.\n\nCalquera contacto co que compartira este blog podería deixar de recibir actualizacións.</string>
   <string name="blogs_remove_blog_ok">Eliminar</string>
@@ -321,12 +329,34 @@
   <string name="bluetooth_setting">Conectar vía Bluetooth</string>
   <string name="bluetooth_setting_enabled">En claquera momento que un contacto estea preto</string>
   <string name="bluetooth_setting_disabled">Só ao engadir contactos</string>
-  <string name="tor_network_setting">Conectar vía Tor</string>
-  <string name="tor_network_setting_never">Nunca</string>
-  <string name="tor_network_setting_wifi">Só utilizando Wi-Fi</string>
-  <string name="tor_network_setting_always">Utilizando Wi-Fi ou datos móbiles</string>
+  <string name="tor_network_setting">Conectar vía Internet (Tor)</string>
+  <string name="tor_network_setting_automatic">Automática baseada na localización</string>
+  <string name="tor_network_setting_without_bridges">Utilizar Tor sen pontes</string>
+  <string name="tor_network_setting_with_bridges">Utilizar Tor con pontes</string>
+  <string name="tor_network_setting_never">Non conectar</string>
+  <!--How and when Tor will connect after Automatic: E.g. Don't connect (in China) or Use Tor with bridges (in Belarus)-->
+  <string name="tor_network_setting_summary">Automático: %1$s (en %2$s)</string>
+  <string name="tor_mobile_data_title">Utilizar datos móbiles</string>
   <!--Settings Security and Panic-->
   <string name="security_settings_title">Seguridade</string>
+  <string name="pref_lock_title">Bloquear pantalla</string>
+  <string name="pref_lock_summary">Utilizar o bloqueo de pantalla do dispositiov para protexer Briar mentras está conectada</string>
+  <string name="pref_lock_disabled_summary">Para utilizar esta función, axuste o bloqueo de pantalla do dispositivo</string>
+  <string name="pref_lock_timeout_title">Tempo de inactividade para o bloqueo da pantalla</string>
+  <!--The %s placeholder is replaced with the following time spans, e.g. 5 Minutes, 1 Hour-->
+  <string name="pref_lock_timeout_summary">Cando non utilice Briar, bloquear automáticamente tras %s</string>
+  <!--Will be shown in a list of lock times. Should fit into the %s of "automatically lock it after %s"-->
+  <string name="pref_lock_timeout_1">1 minuto</string>
+  <!--Will be shown in a list of lock times. Should fit into the %s of "automatically lock it after %s"-->
+  <string name="pref_lock_timeout_5">5 minutos</string>
+  <!--Will be shown in a list of lock times. Should fit into the %s of "automatically lock it after %s"-->
+  <string name="pref_lock_timeout_15">15 minutos</string>
+  <!--Will be shown in a list of lock times. Should fit into the %s of "automatically lock it after %s"-->
+  <string name="pref_lock_timeout_30">30 minutos</string>
+  <!--Will be shown in a list of lock times. Should fit into the %s of "automatically lock it after %s"-->
+  <string name="pref_lock_timeout_60">1 hora</string>
+  <string name="pref_lock_timeout_never">Nunca</string>
+  <string name="pref_lock_timeout_never_summary">Non bloquear nunca automáticamente</string>
   <string name="change_password">Cambiar contrasinal</string>
   <string name="current_password">Contrasinal actual</string>
   <string name="choose_new_password">Novo contrasinal</string>
@@ -349,6 +379,8 @@
   <string name="uninstall_setting_summary">Esto require confirmación manual no evento do pánico</string>
   <!--Settings Notifications-->
   <string name="notification_settings_title">Notificacións</string>
+  <string name="notify_sign_in_title">Lembrarme conectar</string>
+  <string name="notify_sign_in_summary">Mostrar unha alerta cando o teléfono se inicie ou a app fose actualizada</string>
   <string name="notify_private_messages_setting_title">Mensaxes privadas</string>
   <string name="notify_private_messages_setting_summary">Mostra alertas para mensaxes privadas</string>
   <string name="notify_private_messages_setting_summary_26">Configurar alertas para mensaxes privadas</string>
@@ -406,4 +438,9 @@
   <string name="permission_camera_denied_toast">Non concedeu o acceso a cámara</string>
   <string name="qr_code">Código QR</string>
   <string name="show_qr_code_fullscreen">Mostrar o código QR a pantalla completa</string>
+  <!--App Locking-->
+  <string name="lock_unlock">Desbloquear Briar</string>
+  <string name="lock_unlock_verbose">Introduza o PIN do dispositivo, patrón ou contrasinal para desbloquear Briar</string>
+  <string name="lock_is_locked">Briar está bloqueada</string>
+  <string name="lock_tap_to_unlock">Toque para desbloquear</string>
 </resources>
