--- a/briar-android/src/main/res/values-nl/strings.xml
+++ b/briar-android/src/main/res/values-nl/strings.xml
@@ -8,7 +8,7 @@
   <string name="setup_password_explanation">Je Briar-account is versleuteld opgeslagen op je apparaat, niet in de cloud. Als je je wachtzin vergeet of Briar deïnstalleert is er geen manier om je account te herstellen.\n\nKies een lange wachtzin dat moeilijk is om te raden, bijvoorbeeld vier willekeurige woorden of tien willekeurige letters, cijfers en symbolen.</string>
   <string name="setup_doze_title">Achtergrondverbindingen</string>
   <string name="setup_doze_intro">Om berichten te ontvangen dient Briar in de achtergrond verbonden te blijven.</string>
-  <string name="setup_doze_explanation">Briar moet in de achtergrond verbonden blijven om berichten te ontvangen. Schakel batterij-optimalisaties a.u.b. uit zodat Briar verbonden kan blijven.</string>
+  <string name="setup_doze_explanation">Briar moet in de achtergrond verbonden blijven om berichten te ontvangen. Schakel batterij-optimalisaties alsjeblieft uit zodat Briar verbonden kan blijven.</string>
   <string name="setup_doze_button">Sta verbindingen toe</string>
   <string name="choose_nickname">Voer je bijnaam in</string>
   <string name="choose_password">Voer je wachtwoord in</string>
@@ -19,7 +19,7 @@
   <string name="create_account_button">Maak account aan</string>
   <string name="more_info">Meer informatie</string>
   <string name="don_t_ask_again">Vraag niet nog een keer</string>
-  <string name="setup_huawei_text">Tap a.u.b. op de knop hieronder en ga na dat Briar is beschermd op het scherm \"Beveiligde apps\".</string>
+  <string name="setup_huawei_text">Tap alsjeblieft op de knop hieronder en ga na dat Briar is beschermd op het scherm \"Beveiligde apps\".</string>
   <string name="setup_huawei_button">Bescherm Briar</string>
   <string name="setup_huawei_help">Als Briar niet is toegevoegd aan de beschermde apps, is het niet mogelijk om het in de achtergrond te runnen.</string>
   <string name="warning_dozed">%s kon niet in de achtergrond runnen</string>
@@ -35,15 +35,15 @@
   <string name="startup_failed_activity_title">Opstarten Briar mislukt</string>
   <string name="startup_failed_db_error">Om de een of andere reden is je Briar-database corrupt geraakt en niet meer te repareren. Je account, je gegevens en al je contacten zijn verloren. Helaas zul je Briar moeten herinstalleren en een nieuw account aan te maken met \'Ik ben mijn wachtwoord vergeten\' als om je wachtwoord wordt gevraagd.</string>
   <string name="startup_failed_data_too_old_error">Je account was aangemaakt met een oude versie van deze app en kan met deze versie niet worden geopend. Je moet of de oude versie installeren of een nieuw account aanmaken door te kiezen \'Ik ben mijn wachtwoord vergeten\' als om je wachtwoord wordt gevraagd.</string>
-  <string name="startup_failed_data_too_new_error">Deze versie van de is app is te oud. Upgrade a.u.b. naar de laatste versie en probeer het nog een keer.</string>
-  <string name="startup_failed_service_error">Briar kon de vereiste plug-in niet starten. Herinstalleren van Briar lost dit probleem meestal op. Let op dat je al je je account en alle gegevens die daaraan vast zitten zal verliezen omdat Briar geen centrale servers gebruikt om gegevens op te slaan.</string>
+  <string name="startup_failed_data_too_new_error">Deze versie van de is app is te oud. Upgrade alsjeblieft naar de laatste versie en probeer het nog een keer.</string>
+  <string name="startup_failed_service_error">Briar kon de vereiste plug-in niet starten. Herinstalleren van Briar lost dit probleem meestal op. Let op alsjeblieft dat je al je je account en alle gegevens die daaraan vast zitten zal verliezen omdat Briar geen centrale servers gebruikt om gegevens op te slaan.</string>
   <plurals name="expiry_warning">
     <item quantity="one">Dit is een testversie van Briar. Je account verloopt binnen %d dag en kan niet worden vernieuwd.</item>
     <item quantity="other">Dit is een testversie van Briar. Je account verloopt binnen %d dagen en kan niet worden vernieuwd.</item>
   </plurals>
   <string name="expiry_update">De verloopdatum voor de test is vooruitgeschoven. Je account verloopt nu binnen %d dagen.</string>
   <string name="expiry_date_reached">Deze software is verlopen.\nBedankt vor het testen!</string>
-  <string name="download_briar">Om Briar te blijven gebruiken, download a.u.b. versie 1.0.</string>
+  <string name="download_briar">Om Briar te blijven gebruiken, download alsjeblieft versie 1.0.</string>
   <string name="create_new_account">Je moet een nieuw account aanmaken. Je kan dezelfde bijnaam gebruiken.</string>
   <string name="download_briar_button">Download Briar 1.0</string>
   <string name="startup_open_database">Database aan het ontsleutelen…</string>
@@ -55,6 +55,8 @@
   <string name="groups_button">Privégroepen</string>
   <string name="forums_button">Fora</string>
   <string name="blogs_button">Blogs</string>
+  <!--This is part of the main menu. The app will be locked when this is tapped.-->
+  <string name="lock_button">App vergrendelen</string>
   <string name="settings_button">Instellingen</string>
   <string name="sign_out_button">Log uit</string>
   <!--Transports-->
@@ -108,7 +110,8 @@
   <string name="help">Help</string>
   <string name="sorry">Excuses</string>
   <!--Contacts and Private Conversations-->
-  <string name="no_contacts">Geen contacten om te tonen\n\nTik op het +-icoon om een contact toe te voegen</string>
+  <string name="no_contacts">Er zijn geen contacten om te tonen</string>
+  <string name="no_contacts_action">Tap het +-icoon om een contact toe te voegen</string>
   <string name="date_no_private_messages">Geen berichten.</string>
   <string name="no_private_messages">Geen berichten om te tonen</string>
   <string name="message_hint">Schrijf een bericht</string>
@@ -120,26 +123,25 @@
   <string name="add_contact_title">Voeg contact toe</string>
   <string name="face_to_face">Je moet een persoon in levenden lijve ontmoeten om die als contact toe te voegen.\n\nDit voortkomt dat anderen zich als jou voor kunnen doen of in de toekomst je berichten kunnen lezen.</string>
   <string name="continue_button">Ga verder</string>
-  <string name="connection_failed">Connectie is mislukt</string>
   <string name="try_again_button">Probeer nog een keer</string>
   <string name="waiting_for_contact_to_scan">Wacht op contact om te scannen en te verbinden\u2026</string>
   <string name="exchanging_contact_details">Contactdetails aan het uitwisselen\u2026</string>
   <string name="contact_added_toast">Contact toegevoegd: %s</string>
   <string name="contact_already_exists">Contact %s bestaat al</string>
-  <string name="contact_exchange_failed">Uitwisselen contact is mislukt</string>
   <string name="qr_code_invalid">De QR-code is ongeldig</string>
-  <string name="qr_code_unsupported">De QR-code die je probeert te scannen is van een oude ver van %s die niet meer wordt ondersteund.\n\nControleer a.u.b. dat jullie beide de laatste versie gebruiken en probeer het nog een keer.</string>
+  <string name="qr_code_unsupported">De QR-code die je probeert te scannen is van een oude ver van %s die niet meer wordt ondersteund.\n\nControleer alsjeblieft dat jullie beide de laatste versie gebruiken en probeer het nog een keer.</string>
   <string name="camera_error">Camerafout</string>
   <string name="connecting_to_device">Aan het verbinden met apparaat\u2026</string>
   <string name="authenticating_with_device">Aan het authentificeren met apparaat\u2026</string>
-  <string name="connection_aborted_local">Verbinding is verbroken! Dit kan betekenen dat iemand probeert zich met je verbinding probeert te bemoeien.</string>
-  <string name="connection_aborted_remote">Verbinding is door je contact verbroken! Dit kan betekenen dat iemand met je verbinding probeert te bemoeien</string>
+  <string name="connection_error_title">Kon geen verbinding maken met je contact</string>
+  <string name="connection_error_explanation">Controleer alsjeblieft dat je beide met het zelfde wifinetwerk bent verbonden.</string>
+  <string name="connection_error_feedback">Als dit probleem aanhoudt, <a href="feedback">stuur feedback</a> alsjeblieft om ons te helpen de app te verbeteren.</string>
   <!--Introductions-->
   <string name="introduction_onboarding_title">Introduceer je contacten</string>
   <string name="introduction_onboarding_text">Je kan je contacten aan elkaar introduceren zodat ze niet in levenden lijve elkaar te hoeven ontmoeten om op Briar in contact te komen.</string>
   <string name="introduction_menu_item">Introduceer</string>
   <string name="introduction_activity_title">Selecteer contact</string>
-  <string name="introduction_not_possible">Je bent al met een introductie bezig met deze contacten. Laat dit a.u.b. eerst voltooien. Als jij of je contact weinig online zijn, kan dit even duren.</string>
+  <string name="introduction_not_possible">Je bent al met een introductie bezig met deze contacten. Laat dit alsjeblieft eerst voltooien. Als jij of je contact weinig online zijn, kan dit even duren.</string>
   <string name="introduction_message_title">Intoduceer contacten</string>
   <string name="introduction_message_hint">Voeg een bericht toe (optioneel)</string>
   <string name="introduction_button">Introduceer</string>
@@ -161,7 +163,8 @@
     <item quantity="other">%d nieuwe contacten zijn toegevoegd.</item>
   </plurals>
   <!--Private Groups-->
-  <string name="groups_list_empty">Geen groepen om te tonen\n\nTap het +-icoon om een groep aan te maken or vraag je contacten om groepen met je te delen</string>
+  <string name="groups_list_empty">Er zijn geen groepen om te tonen</string>
+  <string name="groups_list_empty_action">Tap het +-icoon om een groep aan te maken of vraag een van je contacten om een groep met je te delen</string>
   <string name="groups_created_by">Is aangemaakt door %s</string>
   <plurals name="messages">
     <item quantity="one">%d bericht</item>
@@ -214,7 +217,8 @@
   <string name="groups_reveal_visible_revealed_by_contact">Contactrelaties zijn zichtbaar voor de groep (geopenbaard door %s)</string>
   <string name="groups_reveal_invisible">Contactrelatie is niet zichtbaar voor de groep</string>
   <!--Forums-->
-  <string name="no_forums">Geen fora om te tonen\n\nTap het +-icoon om een forum aan te maken or vraag je contacten om fora met je te delen</string>
+  <string name="no_forums">Er zijn geen fora om te tonen</string>
+  <string name="no_forums_action">Tap het +-icoon om een forum aan te maken of vraag een van je contacten om een forum met je te delen</string>
   <string name="create_forum_title">Maak forum aan</string>
   <string name="choose_forum_hint">Voer een naam in voor je forum</string>
   <string name="create_forum_button">Maak forum aan</string>
@@ -238,7 +242,8 @@
   <string name="forum_share_button">Deel forum</string>
   <string name="contacts_selected">Contacten geselecteerd</string>
   <string name="activity_share_toolbar_header">Kies contacten</string>
-  <string name="no_contacts_selector">Geen contacten om te tonen\n\nKom a.u.b. hier terug na het toevoegen van een contact</string>
+  <string name="no_contacts_selector">Er zijn geen contacten om te tonen</string>
+  <string name="no_contacts_selector_action">Kom alsjeblieft hier terug na het toevoegen van een contact</string>
   <string name="forum_shared_snackbar">Forum is gedeeld met uitgekozen contacten</string>
   <string name="forum_share_message">Voeg een bericht toe (optioneel)</string>
   <string name="forum_share_error">Er trad een fout op bij het delen van dit forum.</string>
@@ -271,7 +276,8 @@
   <string name="blogs_blog_post_created">Blogpost aangemaakt</string>
   <string name="blogs_blog_post_received">Nieuwe blogpost ontvangen</string>
   <string name="blogs_blog_post_scroll_to">Scroll naar</string>
-  <string name="blogs_feed_empty_state">Geen posts om te tonen\n\nPosts van je contacten en blogs waar je op bent geabonneerd zullen hier verschijnen\n\nTap het penicoon om een post te schrijven</string>
+  <string name="blogs_feed_empty_state">Geen posts om te tonen</string>
+  <string name="blogs_feed_empty_state_action">Hier verschijnen de posts van je je contacten en blogs waar je op bent geabonneerd\n\nTap het penicoon om een post te schrijven</string>
   <string name="blogs_remove_blog">Verwijder bblog</string>
   <string name="blogs_remove_blog_dialog_message">Weet je zeker dat je deze blog wil verwijderen?\n\nPosts zullen van je apparaat worden verwijderd maar niet van apparaten van andere mensen.\n\nContacten met wie je deze blog hebt gedeeld zullen geen updates meer ontvangen.</string>
   <string name="blogs_remove_blog_ok">Verwijderen</string>
@@ -307,10 +313,10 @@
   <string name="blogs_rss_remove_feed_ok">Verwijderen</string>
   <string name="blogs_rss_feeds_manage_delete_error">De feed kon niet worden verwijderd.</string>
   <string name="blogs_rss_feeds_manage_empty_state">Geen RSS-feeds om te tonen\n\nTap op het +-icoon om een feed te importeren</string>
-  <string name="blogs_rss_feeds_manage_error">Er was een probleem met het laden van je feeds. Probeer het later nog een keer.</string>
+  <string name="blogs_rss_feeds_manage_error">Er was een probleem met het laden van je feeds. Probeer het alsjeblieft later nog een keer.</string>
   <!--Settings Display-->
   <string name="pref_language_title">Taal &amp; regio</string>
-  <string name="pref_language_changed">Deze instelling zal werken wanneer u Briar opnieuw opstart. Gelieve uit te loggen en Briar opnieuw te starten.</string>
+  <string name="pref_language_changed">Deze instelling zal werken wanneer u Briar opnieuw opstart. Gelieve alsjeblieft uit te loggen en Briar opnieuw te starten.</string>
   <string name="pref_language_default">Systeemstandaard</string>
   <string name="display_settings_title">Weergeven</string>
   <string name="pref_theme_title">Thema</string>
@@ -323,12 +329,34 @@
   <string name="bluetooth_setting">Verbind via Bluetooth</string>
   <string name="bluetooth_setting_enabled">Alleen als contacten dichtbij zijn</string>
   <string name="bluetooth_setting_disabled">Alleen tijdens toevoegen van contacten</string>
-  <string name="tor_network_setting">Verbind via Tor</string>
-  <string name="tor_network_setting_never">Nooit</string>
-  <string name="tor_network_setting_wifi">Alleen tijdens gebruik van wifi</string>
-  <string name="tor_network_setting_always">Tijdens gebruik van wifi of mobiele dataverbinding</string>
+  <string name="tor_network_setting">Maak verbinding via internet (Tor)</string>
+  <string name="tor_network_setting_automatic">Automatisch gebaseerd op locatie</string>
+  <string name="tor_network_setting_without_bridges">Gebruik Tor zonder bridges</string>
+  <string name="tor_network_setting_with_bridges">Gebruik Tor met bridges</string>
+  <string name="tor_network_setting_never">Maak geen connectie</string>
+  <!--How and when Tor will connect after Automatic: E.g. Don't connect (in China) or Use Tor with bridges (in Belarus)-->
+  <string name="tor_network_setting_summary">Automatisch: %1$s (in %2$s)</string>
+  <string name="tor_mobile_data_title">Gebruik mobiele data</string>
   <!--Settings Security and Panic-->
   <string name="security_settings_title">Beveiliging</string>
+  <string name="pref_lock_title">Schermvergrendeling</string>
+  <string name="pref_lock_summary">Gebruik de schermvergrendeling van het apparaat om Briar te beschermen terwijl je bent ingelogd</string>
+  <string name="pref_lock_disabled_summary">Stel een schermvergrendeling in op je apparaat om deze feature te gebruiken</string>
+  <string name="pref_lock_timeout_title">Time-out van schermvergrendeling bij inactiviteit</string>
+  <!--The %s placeholder is replaced with the following time spans, e.g. 5 Minutes, 1 Hour-->
+  <string name="pref_lock_timeout_summary">Als Briar niet wordt gebruikt, vergrendel automatisch na %s</string>
+  <!--Will be shown in a list of lock times. Should fit into the %s of "automatically lock it after %s"-->
+  <string name="pref_lock_timeout_1">1 minuut</string>
+  <!--Will be shown in a list of lock times. Should fit into the %s of "automatically lock it after %s"-->
+  <string name="pref_lock_timeout_5">5 minuten</string>
+  <!--Will be shown in a list of lock times. Should fit into the %s of "automatically lock it after %s"-->
+  <string name="pref_lock_timeout_15">15 minuten</string>
+  <!--Will be shown in a list of lock times. Should fit into the %s of "automatically lock it after %s"-->
+  <string name="pref_lock_timeout_30">30 minuten</string>
+  <!--Will be shown in a list of lock times. Should fit into the %s of "automatically lock it after %s"-->
+  <string name="pref_lock_timeout_60">1 uur</string>
+  <string name="pref_lock_timeout_never">Nooit</string>
+  <string name="pref_lock_timeout_never_summary">Vergrendel Briar nooit automatisch</string>
   <string name="change_password">Wijzig wachtwoord</string>
   <string name="current_password">Huidig wachtwoord</string>
   <string name="choose_new_password">Nieuw wachtwoord</string>
@@ -385,7 +413,7 @@
   <string name="crash_report_title">Crashrapport Briar</string>
   <string name="briar_crashed">Excuses, Briar is gecrashed.</string>
   <string name="not_your_fault">Dit is niet je schuld</string>
-  <string name="please_send_report">Help ons a.u.b. om Briar te verbeteren door crashrapporten naar ons te sturen.</string>
+  <string name="please_send_report">Help ons alsjeblieft om Briar te verbeteren door crashrapporten naar ons te sturen.</string>
   <string name="report_is_encrypted">We beloven dat het rapport is versleuteld en veilig wordt verzonden.</string>
   <string name="feedback_title">Feedback</string>
   <string name="describe_crash">Beschrijf wat er is gebeurd (optioneel)</string>
@@ -406,8 +434,13 @@
   <!--Permission Requests-->
   <string name="permission_camera_title">Cameratoestemming</string>
   <string name="permission_camera_request_body">Om de QR-code te scannen moet Briar toegang hebben tot de camera.</string>
-  <string name="permission_camera_denied_body">Je hebt toegang tot de camera niet vrijgegeven, terwijl het toevoegen van contacten de camera nodig heeft.\n\nOverweeg a.u.b. toegang vrij te geven.</string>
+  <string name="permission_camera_denied_body">Je hebt toegang tot de camera niet vrijgegeven, terwijl het toevoegen van contacten de camera nodig heeft.\n\nOverweeg alsjeblieft toegang vrij te geven.</string>
   <string name="permission_camera_denied_toast">Cameratoegang niet vrijgegeven</string>
   <string name="qr_code">QR-code</string>
   <string name="show_qr_code_fullscreen">Toon QR-code op volledig scherm</string>
+  <!--App Locking-->
+  <string name="lock_unlock">Ontgrendel Briar</string>
+  <string name="lock_unlock_verbose">Voer van je apparaat PIN, patroon of wachtwoord in om Briar te ontgrendelen</string>
+  <string name="lock_is_locked">Briar is vergrendeld</string>
+  <string name="lock_tap_to_unlock">Tap om te ontgrendelen</string>
 </resources>
